--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c19eeb4
+	base = ec162d4
 	trimbase = 
 	parent = release/dashing/examples_rclcpp_minimal_timer
-	previous = 
+	previous = c19eeb4
