--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ec2b9d9
+	base = 6d3b905
 	trimbase = 
 	parent = debian/dashing/examples_rclcpp_minimal_timer
-	previous = 
+	previous = ec2b9d9
