--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 585fb89
+	base = cd05023
 	trimbase = 
 	parent = release/dashing/examples_rclcpp_minimal_action_server
-	previous = 
+	previous = 585fb89
