--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1c231b5
+	base = f0a9d6a
 	trimbase = 
 	parent = debian/dashing/examples_rclcpp_minimal_action_server
-	previous = 
+	previous = 1c231b5
