--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
 	base = 34eef1f
-	trimbase = b0b0295
+	trimbase = 
 	parent = upstream
 	previous = 7ba3f9f
