--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
 	base = f7da31b
-	trimbase = b583c97
+	trimbase = 
 	parent = upstream
 	previous = 7ba3f9f
