--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
-	base = 5f1c06f
-	trimbase = 
+	base = 72fe42c
+	trimbase = 5f1c06f
 	parent = upstream
 	previous = f805bf8
