--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_timer
 	base = c19eeb4
-	trimbase = f3c7ead
+	trimbase = 
 	parent = upstream
 	previous = 7ba3f9f
