--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_publisher
 	base = d996465
-	trimbase = 0ba32f8
+	trimbase = 
 	parent = upstream
 	previous = 7ba3f9f
