--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
-	base = 0f11e47
-	trimbase = 
+	base = ab21166
+	trimbase = 0f11e47
 	parent = upstream
 	previous = f805bf8
