--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
 	base = 8ac4547
-	trimbase = b44af9a
+	trimbase = 
 	parent = upstream
 	previous = 7ba3f9f
