--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_server
 	base = 585fb89
-	trimbase = 55a6868
+	trimbase = 
 	parent = upstream
 	previous = 7ba3f9f
