--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_server
-	base = c2ceae4
-	trimbase = 
+	base = 8a9202a
+	trimbase = c2ceae4
 	parent = upstream
 	previous = f805bf8
