--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_service
 	base = 433c0e0
-	trimbase = 6c45298
+	trimbase = 
 	parent = upstream
 	previous = 7ba3f9f
