--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
 	base = c9823d1
-	trimbase = 57b07d5
+	trimbase = 
 	parent = upstream
 	previous = 7ba3f9f
