--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_service
-	base = b02c5e7
-	trimbase = 
+	base = ec36543
+	trimbase = b02c5e7
 	parent = upstream
 	previous = f805bf8
