--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_composition
 	base = 7820d36
-	trimbase = ab069df
+	trimbase = 
 	parent = upstream
 	previous = 7ba3f9f
