--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
 	base = 8dc1e7f
-	trimbase = 2b9a908
+	trimbase = 
 	parent = upstream
 	previous = 7ba3f9f
