--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
-	base = 36753c2
-	trimbase = 
+	base = 30390de
+	trimbase = 36753c2
 	parent = upstream
 	previous = f805bf8
