--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_subscriber
 	base = 3310fbb
-	trimbase = fdd0a6c
+	trimbase = 
 	parent = upstream
 	previous = 7ba3f9f
