--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_client
 	base = fcaa209
-	trimbase = 867c541
+	trimbase = 
 	parent = upstream
 	previous = 7ba3f9f
