--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/executors
-	base = d6fdca4
-	trimbase = 
+	base = 20bcdcd
+	trimbase = d6fdca4
 	parent = upstream
 	previous = f805bf8
