--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
 	base = c9b0146
-	trimbase = 9900aaa
+	trimbase = 
 	parent = upstream
 	previous = 7ba3f9f
