--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_client
 	base = 218afd8
-	trimbase = a567e18
+	trimbase = 
 	parent = upstream
 	previous = 7ba3f9f
