--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_client
-	base = 919def7
-	trimbase = 
+	base = 265ceea
+	trimbase = 919def7
 	parent = upstream
 	previous = f805bf8
