--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
 	base = 72fe42c
-	trimbase = 5f1c06f
+	trimbase = 
 	parent = upstream
 	previous = f805bf8
