--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
-	base = a8ce7d0
-	trimbase = 
+	base = db2427b
+	trimbase = a8ce7d0
 	parent = upstream
 	previous = b570fc6
