--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_timer
 	base = b609e08
-	trimbase = 754aadf
+	trimbase = 
 	parent = upstream
 	previous = f805bf8
