--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_timer
-	base = c3c920a
-	trimbase = 
+	base = 65a042f
+	trimbase = c3c920a
 	parent = upstream
 	previous = b570fc6
