--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_publisher
 	base = f1cd626
-	trimbase = 07dac90
+	trimbase = 
 	parent = upstream
 	previous = f805bf8
