--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_publisher
-	base = 15fbd83
-	trimbase = 
+	base = 08a3ef0
+	trimbase = 15fbd83
 	parent = upstream
 	previous = b570fc6
