--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
 	base = ab21166
-	trimbase = 0f11e47
+	trimbase = 
 	parent = upstream
 	previous = f805bf8
