--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
-	base = 32ea553
-	trimbase = 
+	base = cc1ee98
+	trimbase = 32ea553
 	parent = upstream
 	previous = b570fc6
