--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_composition
 	base = 68ad95b
-	trimbase = 85c2b11
+	trimbase = 
 	parent = upstream
 	previous = f805bf8
