--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_composition
-	base = 8097c10
-	trimbase = 
+	base = 94cf285
+	trimbase = 8097c10
 	parent = upstream
 	previous = b570fc6
