--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_server
-	base = e0b6f7c
-	trimbase = 
+	base = 8d9f22b
+	trimbase = e0b6f7c
 	parent = upstream
 	previous = b570fc6
