--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_service
-	base = d97cc4a
-	trimbase = 
+	base = ef25af8
+	trimbase = d97cc4a
 	parent = upstream
 	previous = b570fc6
