--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
 	base = 5741bd2
-	trimbase = b7f98e9
+	trimbase = 
 	parent = upstream
 	previous = f805bf8
