--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
-	base = 310b530
-	trimbase = 
+	base = 8c95437
+	trimbase = 310b530
 	parent = upstream
 	previous = b570fc6
