--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
 	base = 30390de
-	trimbase = 36753c2
+	trimbase = 
 	parent = upstream
 	previous = f805bf8
