--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
-	base = 56ed288
-	trimbase = 
+	base = e0fd04a
+	trimbase = 56ed288
 	parent = upstream
 	previous = b570fc6
