--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_client
 	base = bb4aec5
-	trimbase = b25f28e
+	trimbase = 
 	parent = upstream
 	previous = f805bf8
