--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_client
-	base = 192b8ca
-	trimbase = 
+	base = 87a8740
+	trimbase = 192b8ca
 	parent = upstream
 	previous = b570fc6
