--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/executors
-	base = 7c1e6cd
-	trimbase = 
+	base = a2c976a
+	trimbase = 7c1e6cd
 	parent = upstream
 	previous = b570fc6
