--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
 	base = c07652e
-	trimbase = fa3d6d7
+	trimbase = 
 	parent = upstream
 	previous = f805bf8
