--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
-	base = 1e2f28c
-	trimbase = 
+	base = bf7f140
+	trimbase = 1e2f28c
 	parent = upstream
 	previous = b570fc6
