--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_subscriber
 	base = fa810db
-	trimbase = e42c464
+	trimbase = 
 	parent = upstream
 	previous = f805bf8
