--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_subscriber
-	base = e65099b
-	trimbase = 
+	base = 10d9b22
+	trimbase = e65099b
 	parent = upstream
 	previous = b570fc6
