--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
 	base = a8a3fd9
-	trimbase = d49d2ed
+	trimbase = 
 	parent = upstream
 	previous = f805bf8
