--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
 	base = cc1ee98
-	trimbase = 32ea553
+	trimbase = 
 	parent = upstream
 	previous = b570fc6
