--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
-	base = 40d8cf5
-	trimbase = 
+	base = 3161d51
+	trimbase = 40d8cf5
 	parent = upstream
 	previous = 5112baf
