--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
 	base = e0fd04a
-	trimbase = 56ed288
+	trimbase = 
 	parent = upstream
 	previous = b570fc6
