--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
-	base = 258e6c2
-	trimbase = 
+	base = 6352964
+	trimbase = 258e6c2
 	parent = upstream
 	previous = 5112baf
