--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
-	base = b61e393
-	trimbase = 
+	base = fac9b43
+	trimbase = b61e393
 	parent = upstream
 	previous = 5112baf
