--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
 	base = bf7f140
-	trimbase = 1e2f28c
+	trimbase = 
 	parent = upstream
 	previous = b570fc6
