--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
-	base = edc130e
-	trimbase = 
+	base = 9a19a41
+	trimbase = edc130e
 	parent = upstream
 	previous = 5112baf
