--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
 	base = 8e94bd8
-	trimbase = 4279bff
+	trimbase = 
 	parent = upstream
 	previous = b570fc6
