--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
-	base = 182a925
-	trimbase = 
+	base = acab052
+	trimbase = 182a925
 	parent = upstream
 	previous = 5112baf
