--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
-	base = adebd6e
-	trimbase = 
+	base = 555cf68
+	trimbase = adebd6e
 	parent = upstream
 	previous = 5112baf
