--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/executors
-	base = dd2e0c9
-	trimbase = 
+	base = ec41f0c
+	trimbase = dd2e0c9
 	parent = upstream
 	previous = 5112baf
