--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_subscriber
 	base = 10d9b22
-	trimbase = e65099b
+	trimbase = 
 	parent = upstream
 	previous = b570fc6
