--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_subscriber
-	base = 4a1acb7
-	trimbase = 
+	base = 0e69c11
+	trimbase = 4a1acb7
 	parent = upstream
 	previous = 5112baf
