--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_service
 	base = ef25af8
-	trimbase = d97cc4a
+	trimbase = 
 	parent = upstream
 	previous = b570fc6
