--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_service
-	base = 9ca4ed9
-	trimbase = 
+	base = ceb928a
+	trimbase = 9ca4ed9
 	parent = upstream
 	previous = 5112baf
