--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_client
-	base = f712e42
-	trimbase = 
+	base = 96a5bca
+	trimbase = f712e42
 	parent = upstream
 	previous = 5112baf
