--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_client
 	base = 7e92b21
-	trimbase = 120342c
+	trimbase = 
 	parent = upstream
 	previous = b570fc6
