--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_timer
 	base = 65a042f
-	trimbase = c3c920a
+	trimbase = 
 	parent = upstream
 	previous = b570fc6
