--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_client
 	base = 87a8740
-	trimbase = 192b8ca
+	trimbase = 
 	parent = upstream
 	previous = b570fc6
