--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_client
-	base = c9d8b52
-	trimbase = 
+	base = 9f86e57
+	trimbase = c9d8b52
 	parent = upstream
 	previous = 5112baf
