--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_composition
 	base = 94cf285
-	trimbase = 8097c10
+	trimbase = 
 	parent = upstream
 	previous = b570fc6
