--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_server
 	base = 8d9f22b
-	trimbase = e0b6f7c
+	trimbase = 
 	parent = upstream
 	previous = b570fc6
