--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_server
-	base = 96e22b6
-	trimbase = 
+	base = 7acc4da
+	trimbase = 96e22b6
 	parent = upstream
 	previous = 5112baf
