--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
 	base = acab052
-	trimbase = 182a925
+	trimbase = 
 	parent = upstream
 	previous = 5112baf
