--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
-	base = 451c440
-	trimbase = 
+	base = 917202e
+	trimbase = 451c440
 	parent = upstream
 	previous = 408c800
