--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
 	base = 555cf68
-	trimbase = adebd6e
+	trimbase = 
 	parent = upstream
 	previous = 5112baf
