--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
-	base = 0dad63f
-	trimbase = 
+	base = 3f62c56
+	trimbase = 0dad63f
 	parent = upstream
 	previous = 408c800
