--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_timer
 	base = b5b2db5
-	trimbase = c5aaa06
+	trimbase = 
 	parent = upstream
 	previous = 5112baf
