--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_client
-	base = ca64b71
-	trimbase = 
+	base = 2df7699
+	trimbase = ca64b71
 	parent = upstream
 	previous = 408c800
