--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
 	base = 3161d51
-	trimbase = 40d8cf5
+	trimbase = 
 	parent = upstream
 	previous = 5112baf
