--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
 	base = 9a19a41
-	trimbase = edc130e
+	trimbase = 
 	parent = upstream
 	previous = 5112baf
