--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
-	base = 7b19dd7
-	trimbase = 
+	base = 34c5b47
+	trimbase = 7b19dd7
 	parent = upstream
 	previous = 408c800
