--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_server
 	base = 7acc4da
-	trimbase = 96e22b6
+	trimbase = 
 	parent = upstream
 	previous = 5112baf
