--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_server
-	base = d46eb81
-	trimbase = 
+	base = 00a2781
+	trimbase = d46eb81
 	parent = upstream
 	previous = 408c800
