--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_service
 	base = ceb928a
-	trimbase = 9ca4ed9
+	trimbase = 
 	parent = upstream
 	previous = 5112baf
