--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
-	base = a013cd6
-	trimbase = 
+	base = 2f48550
+	trimbase = a013cd6
 	parent = upstream
 	previous = 408c800
