--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_composition
 	base = 5e7e358
-	trimbase = 8905b7c
+	trimbase = 
 	parent = upstream
 	previous = 5112baf
