--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_composition
-	base = 29b4f38
-	trimbase = 
+	base = 3f659a1
+	trimbase = 29b4f38
 	parent = upstream
 	previous = 408c800
