--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
-	base = 9325f0c
-	trimbase = 
+	base = ab91a78
+	trimbase = 9325f0c
 	parent = upstream
 	previous = 408c800
