--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_action_client
-	base = bbac862
-	trimbase = 
+	base = 27118ee
+	trimbase = bbac862
 	parent = upstream
 	previous = 408c800
