--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/executors
-	base = 2688a31
-	trimbase = 
+	base = e77bcbe
+	trimbase = 2688a31
 	parent = upstream
 	previous = 408c800
