--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_publisher
 	base = 13a02ce
-	trimbase = 3795c19
+	trimbase = 
 	parent = upstream
 	previous = 5112baf
