--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_publisher
-	base = 7ae9b4c
-	trimbase = 
+	base = e8b3bad
+	trimbase = 7ae9b4c
 	parent = upstream
 	previous = 408c800
