--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/minimal_subscriber
-	base = e718c67
-	trimbase = 
+	base = 86a5b53
+	trimbase = e718c67
 	parent = upstream
 	previous = 408c800
