--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = f9a8ddb
-	trim = 
-	trimbase = 
+	base = 2f0fcfe
+	trim = rclcpp/minimal_subscriber
+	trimbase = f9a8ddb
