--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = 02fc174
-	trim = 
-	trimbase = 
+	base = 98a8f9e
+	trim = rclcpp/minimal_client
+	trimbase = 02fc174
