--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = ced732b
-	trim = 
-	trimbase = 
+	base = e5b090d
+	trim = rclcpp/minimal_service
+	trimbase = ced732b
