--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = 8f9f372
-	trim = 
-	trimbase = 
+	base = 6e18842
+	trim = rclcpp/minimal_action_client
+	trimbase = 8f9f372
