--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = 9736956
-	trim = 
-	trimbase = 
+	base = 999bb1e
+	trim = rclcpp/minimal_publisher
+	trimbase = 9736956
