--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = 5b55abe
-	trim = 
-	trimbase = 
+	base = c8bf549
+	trim = rclcpp/minimal_action_server
+	trimbase = 5b55abe
