--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = e6be60b
-	trim = 
-	trimbase = 
+	base = a973b8d
+	trim = rclcpp/minimal_composition
+	trimbase = e6be60b
