--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = 9b78c14
-	trim = 
-	trimbase = 
+	base = c340a02
+	trim = rclcpp/minimal_timer
+	trimbase = 9b78c14
