--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = ecab528
-	trim = 
-	trimbase = 
+	base = e21bd77
+	trim = rclpy/topics/minimal_subscriber
+	trimbase = ecab528
