--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = a88f0fb
-	trim = 
-	trimbase = 
+	base = df0e78c
+	trim = rclpy/topics/minimal_publisher
+	trimbase = a88f0fb
