--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = 20ff3c1
-	trim = 
-	trimbase = 
+	base = 7063aa4
+	trim = rclpy/services/minimal_client
+	trimbase = 20ff3c1
