--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = b103859
-	trim = 
-	trimbase = 
+	base = 6857863
+	trim = rclpy/services/minimal_service
+	trimbase = b103859
