--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = 651442f
-	trim = 
-	trimbase = 
+	base = 89da8df
+	trim = rclpy/actions/minimal_action_client
+	trimbase = 651442f
