--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = 7b016e4
-	trim = 
-	trimbase = 
+	base = 178d4e7
+	trim = rclpy/actions/minimal_action_server
+	trimbase = 7b016e4
