--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6da62a0
-	base = fc23798
-	trim = 
-	trimbase = 
+	base = 44b6bbe
+	trim = rclpy/executors
+	trimbase = fc23798
