--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclpy_executors
-	previous = 
-	base = 44b6bbe
+	previous = 44b6bbe
+	base = 0417623
 	trim = 
 	trimbase = 
