--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/examples_rclpy_executors
-	previous = 
-	base = ea4f484
+	previous = ea4f484
+	base = 41b7241
 	trim = 
 	trimbase = 
