--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclpy_minimal_action_server
-	previous = 
-	base = 178d4e7
+	previous = 178d4e7
+	base = b946111
 	trim = 
 	trimbase = 
