--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/examples_rclpy_minimal_action_server
-	previous = 
-	base = 4745aa5
+	previous = 4745aa5
+	base = 0b9f6fd
 	trim = 
 	trimbase = 
