--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclcpp_minimal_publisher
-	previous = 
-	base = 999bb1e
+	previous = 999bb1e
+	base = c9edc97
 	trim = 
 	trimbase = 
