--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/examples_rclcpp_minimal_publisher
-	previous = 
-	base = ad24da3
+	previous = ad24da3
+	base = 8d04ec7
 	trim = 
 	trimbase = 
