--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclpy_minimal_client
-	previous = 
-	base = 7063aa4
+	previous = 7063aa4
+	base = f067eb7
 	trim = 
 	trimbase = 
