--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/examples_rclpy_minimal_client
-	previous = 
-	base = 736c042
+	previous = 736c042
+	base = cb31514
 	trim = 
 	trimbase = 
