--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclcpp_minimal_composition
-	previous = 
-	base = a973b8d
+	previous = a973b8d
+	base = 2410b09
 	trim = 
 	trimbase = 
