--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclpy_minimal_subscriber
-	previous = 
-	base = e21bd77
+	previous = e21bd77
+	base = 8abd37f
 	trim = 
 	trimbase = 
