--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/examples_rclpy_minimal_subscriber
-	previous = 
-	base = 5160900
+	previous = 5160900
+	base = 369284e
 	trim = 
 	trimbase = 
