--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclcpp_minimal_action_client
-	previous = 
-	base = 6e18842
+	previous = 6e18842
+	base = 2ad1282
 	trim = 
 	trimbase = 
