--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/examples_rclcpp_minimal_action_client
-	previous = 
-	base = eaaa618
+	previous = eaaa618
+	base = 9a6f9f8
 	trim = 
 	trimbase = 
