--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclcpp_minimal_service
-	previous = 
-	base = e5b090d
+	previous = e5b090d
+	base = 4218aeb
 	trim = 
 	trimbase = 
