--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclcpp_minimal_client
-	previous = 
-	base = 98a8f9e
+	previous = 98a8f9e
+	base = 931deaf
 	trim = 
 	trimbase = 
