--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/examples_rclcpp_minimal_client
-	previous = 
-	base = c98eb79
+	previous = c98eb79
+	base = bb17115
 	trim = 
 	trimbase = 
