--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclpy_minimal_action_client
-	previous = 
-	base = 89da8df
+	previous = 89da8df
+	base = a5afb01
 	trim = 
 	trimbase = 
