--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/examples_rclpy_minimal_action_client
-	previous = 
-	base = e3e3520
+	previous = e3e3520
+	base = bc4adad
 	trim = 
 	trimbase = 
