--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclcpp_minimal_subscriber
-	previous = 
-	base = 2f0fcfe
+	previous = 2f0fcfe
+	base = 1dea64b
 	trim = 
 	trimbase = 
