--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/examples_rclcpp_minimal_subscriber
-	previous = 
-	base = b569cc0
+	previous = b569cc0
+	base = 17cc663
 	trim = 
 	trimbase = 
