--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclcpp_minimal_action_server
-	previous = 
-	base = c8bf549
+	previous = c8bf549
+	base = 6ee3f76
 	trim = 
 	trimbase = 
