--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/examples_rclcpp_minimal_action_server
-	previous = 
-	base = bf676e1
+	previous = bf676e1
+	base = 154b128
 	trim = 
 	trimbase = 
