--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclpy_minimal_publisher
-	previous = 
-	base = df0e78c
+	previous = df0e78c
+	base = 0a4bd62
 	trim = 
 	trimbase = 
