--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/examples_rclpy_minimal_publisher
-	previous = 
-	base = 05ada60
+	previous = 05ada60
+	base = b0c7cdf
 	trim = 
 	trimbase = 
