--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclcpp_minimal_timer
-	previous = 
-	base = c340a02
+	previous = c340a02
+	base = dae3ce4
 	trim = 
 	trimbase = 
