--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/examples_rclcpp_minimal_timer
-	previous = 
-	base = 30fe945
+	previous = 30fe945
+	base = c6397b4
 	trim = 
 	trimbase = 
