--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/examples_rclpy_minimal_service
-	previous = 
-	base = 6857863
+	previous = 6857863
+	base = 1ab5ab3
 	trim = 
 	trimbase = 
