--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = b18e41b
+	base = eea618c
 	trim = rclpy/topics/minimal_subscriber
-	trimbase = 
+	trimbase = b18e41b
