--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = a1cafb6
+	base = d21b515
 	trim = rclpy/topics/minimal_publisher
-	trimbase = 
+	trimbase = a1cafb6
