--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = a329e4e
+	base = b9cfda0
 	trim = rclcpp/minimal_timer
-	trimbase = 
+	trimbase = a329e4e
