--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = 1eba9e8
+	base = ac0a188
 	trim = rclcpp/minimal_publisher
-	trimbase = 
+	trimbase = 1eba9e8
