--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = e0ea2bc
+	base = 0b2380b
 	trim = rclpy/actions/minimal_action_client
-	trimbase = 
+	trimbase = e0ea2bc
