--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = cf7cc5f
+	base = 7b31050
 	trim = rclcpp/minimal_action_server
-	trimbase = 
+	trimbase = cf7cc5f
