--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = 9ef6373
+	base = e408016
 	trim = rclcpp/minimal_service
-	trimbase = 
+	trimbase = 9ef6373
