--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 70597bc
-	trimbase = 
+	trim = rclcpp/multithreaded_executor
+	base = 212b430
+	trimbase = 70597bc
 	parent = upstream
 	previous = a973389
