--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = 935fccd
+	base = 085b34f
 	trim = rclcpp/minimal_client
-	trimbase = 
+	trimbase = 935fccd
