--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = 2e55f2f
+	base = d7c818e
 	trim = rclcpp/minimal_composition
-	trimbase = 
+	trimbase = 2e55f2f
