--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = 9a09ed6
+	base = 47bccd4
 	trim = rclpy/actions/minimal_action_server
-	trimbase = 
+	trimbase = 9a09ed6
