--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = b3cc199
+	base = a83a115
 	trim = rclcpp/minimal_action_client
-	trimbase = 
+	trimbase = b3cc199
