--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = 11d392c
+	base = 0c0bd99
 	trim = rclpy/executors
-	trimbase = 
+	trimbase = 11d392c
