--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = ff94971
+	base = 4a68e72
 	trim = rclpy/services/minimal_client
-	trimbase = 
+	trimbase = ff94971
