--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = 651115d
+	base = 52ee6d0
 	trim = rclpy/services/minimal_service
-	trimbase = 
+	trimbase = 651115d
