--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a973389
-	base = 4d13613
+	base = 5e55d3d
 	trim = rclcpp/minimal_subscriber
-	trimbase = 
+	trimbase = 4d13613
