--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 212b430
+	base = cd6f9be
 	trimbase = 
 	parent = release/eloquent/examples_rclcpp_multithreaded_executor
-	previous = 
+	previous = 212b430
