--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 84b9969
+	base = f80d27f
 	trimbase = 
 	parent = debian/eloquent/examples_rclcpp_multithreaded_executor
-	previous = 
+	previous = 84b9969
