--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = a0925f20
+	base = def9cefd
 	trim = rclcpp/minimal_composition
-	trimbase = 
+	trimbase = a0925f20
