--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = 2b76b7af
+	base = 65e326b9
 	trim = rclcpp/minimal_action_client
-	trimbase = 
+	trimbase = 2b76b7af
