--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = ebc0ffd2
+	base = bedead9c
 	trim = rclcpp/minimal_publisher
-	trimbase = 
+	trimbase = ebc0ffd2
