--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = fa200844
+	base = 6b91a0fd
 	trim = rclcpp/minimal_service
-	trimbase = 
+	trimbase = fa200844
