--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = 61a156be
+	base = fd1f9852
 	trim = rclcpp/minimal_action_server
-	trimbase = 
+	trimbase = 61a156be
