--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = f3de2a28
+	base = 825abbc8
 	trim = rclcpp/minimal_subscriber
-	trimbase = 
+	trimbase = f3de2a28
