--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = ab65696a
+	base = f89bf5b5
 	trim = rclcpp/minimal_timer
-	trimbase = 
+	trimbase = ab65696a
