--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = 9f4de6ad
+	base = 5fe2fb3f
 	trim = rclcpp/minimal_client
-	trimbase = 
+	trimbase = 9f4de6ad
