--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = 788d0428
+	base = ca222e81
 	trim = rclpy/topics/minimal_publisher
-	trimbase = 
+	trimbase = 788d0428
