--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = 6cd39503
+	base = 8193820a
 	trim = rclpy/topics/minimal_subscriber
-	trimbase = 
+	trimbase = 6cd39503
