--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = 38e05af7
+	base = 8c2c3b24
 	trim = rclpy/actions/minimal_action_client
-	trimbase = 
+	trimbase = 38e05af7
