--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = 99ce1571
+	base = 1e58803e
 	trim = rclpy/actions/minimal_action_server
-	trimbase = 
+	trimbase = 99ce1571
