--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = b757bbdc
+	base = a99d7af2
 	trim = rclpy/executors
-	trimbase = 
+	trimbase = b757bbdc
