--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = f1984425
+	base = 84eafa80
 	trim = rclpy/services/minimal_service
-	trimbase = 
+	trimbase = f1984425
