--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 45990057
-	base = 49cc03eb
+	base = 98e41dbc
 	trim = rclpy/services/minimal_client
-	trimbase = 
+	trimbase = 49cc03eb
