Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.8.1": ["Jacob Hassold", "jhassold@dcscorp.com"]}
+{"0.8.2": ["Jacob Hassold", "jhassold@dcscorp.com"], "0.8.1": ["Jacob Hassold", "jhassold@dcscorp.com"]}
