--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 071d62d9
-	trimbase = 
+	trim = rclpy/topics/minimal_subscriber
+	base = b24aa0ee
+	trimbase = 071d62d9
 	parent = upstream
 	previous = 4c61ab33
