--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5abe9348
-	trimbase = 
+	trim = rclpy/topics/minimal_publisher
+	base = 1cc26f4d
+	trimbase = 5abe9348
 	parent = upstream
 	previous = 4c61ab33
