--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0346df61
-	trimbase = 
+	trim = rclcpp/executors/multithreaded_executor
+	base = 913e063a
+	trimbase = 0346df61
 	parent = upstream
 	previous = 4c61ab33
