--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6f22f8c4
-	trimbase = 
+	trim = rclcpp/services/minimal_client
+	base = e173baa5
+	trimbase = 6f22f8c4
 	parent = upstream
 	previous = 4c61ab33
