--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = aeed7956
-	trimbase = 
+	trim = rclcpp/services/minimal_service
+	base = 021ebcef
+	trimbase = aeed7956
 	parent = upstream
 	previous = 4c61ab33
