--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = cd0fc11d
-	trimbase = 
+	trim = rclpy/services/minimal_service
+	base = 8eb087f8
+	trimbase = cd0fc11d
 	parent = upstream
 	previous = 4c61ab33
