--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 35c61d43
-	trimbase = 
+	trim = rclcpp/actions/minimal_action_client
+	base = c14811cf
+	trimbase = 35c61d43
 	parent = upstream
 	previous = 4c61ab33
