--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = bc858567
-	trimbase = 
+	trim = rclpy/executors
+	base = 0e697006
+	trimbase = bc858567
 	parent = upstream
 	previous = 4c61ab33
