--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9727034d
-	trimbase = 
+	trim = rclcpp/actions/minimal_action_server
+	base = 0d16c9e8
+	trimbase = 9727034d
 	parent = upstream
 	previous = 4c61ab33
