--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3e6cdebd
-	trimbase = 
+	trim = rclpy/services/minimal_client
+	base = 44e689ac
+	trimbase = 3e6cdebd
 	parent = upstream
 	previous = 4c61ab33
