--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e173baa5
+	base = 7a1fd961
 	trimbase = 
 	parent = release/foxy/examples_rclcpp_minimal_client
-	previous = 
+	previous = e173baa5
