--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2564beb4
+	base = d666e126
 	trimbase = 
 	parent = debian/foxy/examples_rclcpp_minimal_client
-	previous = 
+	previous = 2564beb4
