--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1cc26f4d
+	base = e85ad59e
 	trimbase = 
 	parent = release/foxy/examples_rclpy_minimal_publisher
-	previous = 
+	previous = 1cc26f4d
