--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c94cfc87
+	base = 98c50593
 	trimbase = 
 	parent = debian/foxy/examples_rclpy_minimal_publisher
-	previous = 
+	previous = c94cfc87
