--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e5e84bb3
+	base = 5b141900
 	trimbase = 
 	parent = release/foxy/examples_rclcpp_minimal_subscriber
-	previous = 
+	previous = e5e84bb3
