--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 14dc06fd
+	base = 3e49c977
 	trimbase = 
 	parent = debian/foxy/examples_rclcpp_minimal_subscriber
-	previous = 
+	previous = 14dc06fd
