--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0d16c9e8
+	base = b444da44
 	trimbase = 
 	parent = release/foxy/examples_rclcpp_minimal_action_server
-	previous = 
+	previous = 0d16c9e8
