--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 30c4b74b
+	base = 6a00e874
 	trimbase = 
 	parent = debian/foxy/examples_rclcpp_minimal_action_server
-	previous = 
+	previous = 30c4b74b
