--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8eb087f8
+	base = 7da12ec9
 	trimbase = 
 	parent = release/foxy/examples_rclpy_minimal_service
-	previous = 
+	previous = 8eb087f8
