--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 650d3fbb
+	base = 2351bb26
 	trimbase = 
 	parent = debian/foxy/examples_rclpy_minimal_service
-	previous = 
+	previous = 650d3fbb
