--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 76fe8404
+	base = b0e1d994
 	trimbase = 
 	parent = release/foxy/examples_rclcpp_minimal_timer
-	previous = 
+	previous = 76fe8404
