--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ca69e6f3
+	base = 27ec8f66
 	trimbase = 
 	parent = debian/foxy/examples_rclcpp_minimal_timer
-	previous = 
+	previous = ca69e6f3
