--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0e697006
+	base = 561c930b
 	trimbase = 
 	parent = release/foxy/examples_rclpy_executors
-	previous = 
+	previous = 0e697006
