--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 00e8af80
+	base = 4ae755f8
 	trimbase = 
 	parent = debian/foxy/examples_rclpy_executors
-	previous = 
+	previous = 00e8af80
