--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 021ebcef
+	base = 0b76024f
 	trimbase = 
 	parent = release/foxy/examples_rclcpp_minimal_service
-	previous = 
+	previous = 021ebcef
