--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d4772b2d
+	base = 98c970bb
 	trimbase = 
 	parent = debian/foxy/examples_rclcpp_minimal_service
-	previous = 
+	previous = d4772b2d
