--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c40169f1
+	base = 5a289ef9
 	trimbase = 
 	parent = release/foxy/examples_rclpy_minimal_action_server
-	previous = 
+	previous = c40169f1
