--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f3fc4766
+	base = a962fa57
 	trimbase = 
 	parent = debian/foxy/examples_rclpy_minimal_action_server
-	previous = 
+	previous = f3fc4766
