--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 44e689ac
+	base = 79cef67e
 	trimbase = 
 	parent = release/foxy/examples_rclpy_minimal_client
-	previous = 
+	previous = 44e689ac
