--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f0891aca
+	base = b396d636
 	trimbase = 
 	parent = debian/foxy/examples_rclpy_minimal_client
-	previous = 
+	previous = f0891aca
