--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c14811cf
+	base = 6be3c489
 	trimbase = 
 	parent = release/foxy/examples_rclcpp_minimal_action_client
-	previous = 
+	previous = c14811cf
