--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fdfcfac6
+	base = 4d403ee1
 	trimbase = 
 	parent = debian/foxy/examples_rclcpp_minimal_action_client
-	previous = 
+	previous = fdfcfac6
