--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6a3acb59
+	base = 591dc727
 	trimbase = 
 	parent = release/foxy/examples_rclcpp_minimal_publisher
-	previous = 
+	previous = 6a3acb59
