--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c6810947
+	base = 5fbed26f
 	trimbase = 
 	parent = debian/foxy/examples_rclcpp_minimal_publisher
-	previous = 
+	previous = c6810947
