--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ba782dcf
+	base = 1c7aecfa
 	trimbase = 
 	parent = release/foxy/examples_rclpy_minimal_action_client
-	previous = 
+	previous = ba782dcf
