--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9a5babdb
+	base = dcc4de1b
 	trimbase = 
 	parent = debian/foxy/examples_rclpy_minimal_action_client
-	previous = 
+	previous = 9a5babdb
