--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9b372e81
+	base = 4dfdea1d
 	trimbase = 
 	parent = debian/foxy/examples_rclcpp_minimal_composition
-	previous = 
+	previous = 9b372e81
