--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b24aa0ee
+	base = 2b70d60a
 	trimbase = 
 	parent = release/foxy/examples_rclpy_minimal_subscriber
-	previous = 
+	previous = b24aa0ee
