--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 945fd0d1
+	base = 945765c2
 	trimbase = 
 	parent = debian/foxy/examples_rclpy_minimal_subscriber
-	previous = 
+	previous = 945fd0d1
