--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 913e063a
+	base = 95745669
 	trimbase = 
 	parent = release/foxy/examples_rclcpp_multithreaded_executor
-	previous = 
+	previous = 913e063a
