--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8587b6dc
+	base = 94ed487b
 	trimbase = 
 	parent = debian/foxy/examples_rclcpp_multithreaded_executor
-	previous = 
+	previous = 8587b6dc
