--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
-	base = bcf85a5a
-	trimbase = 
+	base = c3228453
+	trimbase = bcf85a5a
 	parent = upstream
 	previous = 94a0f78f
