--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
 	base = b24aa0ee
-	trimbase = 071d62d9
+	trimbase = 
 	parent = upstream
 	previous = 4c61ab33
