--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
 	base = 1cc26f4d
-	trimbase = 5abe9348
+	trimbase = 
 	parent = upstream
 	previous = 4c61ab33
