--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/actions/minimal_action_server
-	base = bf7abcd0
-	trimbase = 
+	base = 1a536495
+	trimbase = bf7abcd0
 	parent = upstream
 	previous = 94a0f78f
