--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_subscriber
-	base = b7adc740
-	trimbase = 
+	base = 54717272
+	trimbase = b7adc740
 	parent = upstream
 	previous = 94a0f78f
