--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_subscriber
 	base = e5e84bb3
-	trimbase = f139593e
+	trimbase = 
 	parent = upstream
 	previous = 4c61ab33
