--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/actions/minimal_action_client
 	base = c14811cf
-	trimbase = 35c61d43
+	trimbase = 
 	parent = upstream
 	previous = 4c61ab33
