--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/actions/minimal_action_client
-	base = 771ae030
-	trimbase = 
+	base = 9a886820
+	trimbase = 771ae030
 	parent = upstream
 	previous = 94a0f78f
