--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
 	base = ba782dcf
-	trimbase = 8480e28a
+	trimbase = 
 	parent = upstream
 	previous = 4c61ab33
