--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
-	base = 5c931e17
-	trimbase = 
+	base = 9c5eb38e
+	trimbase = 5c931e17
 	parent = upstream
 	previous = 94a0f78f
