--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/services/minimal_service
-	base = ff304957
-	trimbase = 
+	base = e52affd9
+	trimbase = ff304957
 	parent = upstream
 	previous = 94a0f78f
