--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_publisher
 	base = 6a3acb59
-	trimbase = c6950047
+	trimbase = 
 	parent = upstream
 	previous = 4c61ab33
