--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_publisher
-	base = a713b4b2
-	trimbase = 
+	base = 1785b7f5
+	trimbase = a713b4b2
 	parent = upstream
 	previous = 94a0f78f
