--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/composition/minimal_composition
 	base = 20e0c8c5
-	trimbase = aa2c8cad
+	trimbase = 
 	parent = upstream
 	previous = 4c61ab33
