--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
-	base = 892abf0e
-	trimbase = 
+	base = cdd88c03
+	trimbase = 892abf0e
 	parent = upstream
 	previous = 94a0f78f
