--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
 	base = c40169f1
-	trimbase = 9509d70d
+	trimbase = 
 	parent = upstream
 	previous = 4c61ab33
