--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/executors
-	base = c06528d4
-	trimbase = 
+	base = 4d7a7797
+	trimbase = c06528d4
 	parent = upstream
 	previous = 94a0f78f
