--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/executors/multithreaded_executor
 	base = 913e063a
-	trimbase = 0346df61
+	trimbase = 
 	parent = upstream
 	previous = 4c61ab33
