--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/executors/multithreaded_executor
-	base = 97a1141b
-	trimbase = 
+	base = 49ec7a79
+	trimbase = 97a1141b
 	parent = upstream
 	previous = 94a0f78f
