--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/timers/minimal_timer
 	base = 76fe8404
-	trimbase = 036636c4
+	trimbase = 
 	parent = upstream
 	previous = 4c61ab33
