--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/timers/minimal_timer
-	base = 89bbbea2
-	trimbase = 
+	base = 72f1e1cd
+	trimbase = 89bbbea2
 	parent = upstream
 	previous = 94a0f78f
