--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/executors
-	base = d33278ad
-	trimbase = 
+	base = 26b6ecd6
+	trimbase = d33278ad
 	parent = upstream
 	previous = a2309e9b
