--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
 	base = 48b5c43b
-	trimbase = e396d771
+	trimbase = 
 	parent = upstream
 	previous = 94a0f78f
