--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
-	base = e2a067c9
-	trimbase = 
+	base = 6e127460
+	trimbase = e2a067c9
 	parent = upstream
 	previous = a2309e9b
