--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
 	base = 371c21bb
-	trimbase = 1d727b87
+	trimbase = 
 	parent = upstream
 	previous = 94a0f78f
