--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
 	base = c3228453
-	trimbase = bcf85a5a
+	trimbase = 
 	parent = upstream
 	previous = 94a0f78f
