--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
 	base = 9c5eb38e
-	trimbase = 5c931e17
+	trimbase = 
 	parent = upstream
 	previous = 94a0f78f
