--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
 	base = 0dd6f1ec
-	trimbase = 8d230e18
+	trimbase = 
 	parent = upstream
 	previous = 94a0f78f
