--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/executors/multithreaded_executor
-	base = 63ad93ff
-	trimbase = 
+	base = d83e281a
+	trimbase = 63ad93ff
 	parent = upstream
 	previous = a2309e9b
