--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/timers/minimal_timer
-	base = 512260b6
-	trimbase = 
+	base = e6a97506
+	trimbase = 512260b6
 	parent = upstream
 	previous = a2309e9b
