--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/services/minimal_client
 	base = b85a2a08
-	trimbase = 51aedfc1
+	trimbase = 
 	parent = upstream
 	previous = 94a0f78f
