--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/services/minimal_client
-	base = cda72ae9
-	trimbase = 
+	base = 64a16510
+	trimbase = cda72ae9
 	parent = upstream
 	previous = a2309e9b
