--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/services/minimal_service
-	base = fa01d65f
-	trimbase = 
+	base = 201d3545
+	trimbase = fa01d65f
 	parent = upstream
 	previous = a2309e9b
