--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/services/minimal_service
 	base = e52affd9
-	trimbase = ff304957
+	trimbase = 
 	parent = upstream
 	previous = 94a0f78f
