--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_subscriber
 	base = 54717272
-	trimbase = b7adc740
+	trimbase = 
 	parent = upstream
 	previous = 94a0f78f
