--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_subscriber
-	base = 30d2eca4
-	trimbase = 
+	base = d6dc007a
+	trimbase = 30d2eca4
 	parent = upstream
 	previous = a2309e9b
