--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/actions/minimal_action_server
-	base = 000e9954
-	trimbase = 
+	base = 69b6d6e0
+	trimbase = 000e9954
 	parent = upstream
 	previous = a2309e9b
