--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/composition/minimal_composition
 	base = 301179e5
-	trimbase = 6b326dac
+	trimbase = 
 	parent = upstream
 	previous = 94a0f78f
