--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/composition/minimal_composition
-	base = 3da8ea33
-	trimbase = 
+	base = 60a55c88
+	trimbase = 3da8ea33
 	parent = upstream
 	previous = a2309e9b
