--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
 	base = 1e2f205e
-	trimbase = 9d88ddd9
+	trimbase = 
 	parent = upstream
 	previous = a2309e9b
