--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_subscriber
-	base = 42ed6d38
-	trimbase = 
+	base = 8e60797e
+	trimbase = 42ed6d38
 	parent = upstream
 	previous = 90df5e62
