--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
 	base = 63ad1aa0
-	trimbase = 5e596ea2
+	trimbase = 
 	parent = upstream
 	previous = a2309e9b
