--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/topics/minimal_publisher
-	base = d9d01cb9
-	trimbase = 
+	base = 0f292d24
+	trimbase = d9d01cb9
 	parent = upstream
 	previous = 90df5e62
