--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
-	base = 1c051b34
-	trimbase = 
+	base = d9b5c3a1
+	trimbase = 1c051b34
 	parent = upstream
 	previous = 90df5e62
