--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_service
 	base = c8d0985f
-	trimbase = bb76a020
+	trimbase = 
 	parent = upstream
 	previous = a2309e9b
