--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/services/minimal_client
-	base = c0c7635d
-	trimbase = 
+	base = c7243203
+	trimbase = c0c7635d
 	parent = upstream
 	previous = 90df5e62
