--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/executors
-	base = 6995e9c6
-	trimbase = 
+	base = 28c0a4d2
+	trimbase = 6995e9c6
 	parent = upstream
 	previous = 90df5e62
