--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
 	base = bf80aa28
-	trimbase = 9bd36e63
+	trimbase = 
 	parent = upstream
 	previous = a2309e9b
