--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_server
-	base = 3a010499
-	trimbase = 
+	base = a9d07cb0
+	trimbase = 3a010499
 	parent = upstream
 	previous = 90df5e62
