--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
 	base = 89fe5843
-	trimbase = 229276ac
+	trimbase = 
 	parent = upstream
 	previous = a2309e9b
