--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_subscriber
 	base = d6dc007a
-	trimbase = 30d2eca4
+	trimbase = 
 	parent = upstream
 	previous = a2309e9b
