--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclpy/actions/minimal_action_client
-	base = ff0b779c
-	trimbase = 
+	base = 69465c73
+	trimbase = ff0b779c
 	parent = upstream
 	previous = 90df5e62
