--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_subscriber
-	base = 3cf49718
-	trimbase = 
+	base = 5cc53342
+	trimbase = 3cf49718
 	parent = upstream
 	previous = 90df5e62
