--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_publisher
 	base = 325e6160
-	trimbase = 888e9096
+	trimbase = 
 	parent = upstream
 	previous = a2309e9b
