--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/topics/minimal_publisher
-	base = e0edcd54
-	trimbase = 
+	base = a9a24bac
+	trimbase = e0edcd54
 	parent = upstream
 	previous = 90df5e62
