--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rclcpp/timers/minimal_timer
 	base = e6a97506
-	trimbase = 512260b6
+	trimbase = 
 	parent = upstream
 	previous = a2309e9b
